# zwitterion

./: Cargo.toml  Justfile  README.md
assets/: test.rinha
src/: interpreter.rs  lib.rs  main.rs  utils.rs
src/interpreter/: binary.rs  env.rs  eval.rs  mod.rs  utils.rs
tests/: rinha.rs
tests/snapshots/: rinha__declare_tuple.snap  rinha__define_variable.snap  rinha__print_number.snap  rinha__print_string.snap  rinha__print_twice.snap  rinha__sum-2.snap  rinha__sum.snap  rinha__tuple_first.snap  rinha__tuple_first_fail.snap  rinha__tuple_second.snap  rinha__tuple_second_fail.snap
